2005-04-28 François Proulx <francois.proulx@gmail.com>
	* Added check in MainUI toolbar so that it won't show "NOT logged in ?" message when connect to a real hotspot ( not virtual )
		* This message confused many users ( they clicked and got the virtual login instead ! )
	* Hide adminstration features ( statistics, hotspot creation, network wide content etc...) from all but Super admins
	* Fixed getAllLocativeArtisticContent in Node.php added is_persistent check
	* Added $associate_existing_content parameter to processNewContentUI to allows reuse for existing content ( in ContentGroup )
	* Fixed bug in FlickrPhotoStream delete ( missing return from parent )
	* Added security check in all content classes ( ProcessAdminUI )
	
2005-04-26 François Proulx <francois.proulx@gmail.com>
	* Replaced show only content groups by show persistent
	
2005-04-26 François Proulx <francois.proulx@gmail.com>
	* Added missing /content directory
	
2005-04-26 François Proulx <francois.proulx@gmail.com>
	* Added /content/ for displaying all content elements
		* Logging is disable when viewing them
		* All content elements will expand
		* Pattern languages won't display everything ( special property ) isExpandable
	* Added a link in portal pages to go to /content/
	* Added Show all contents button in content_admin.php
	
2005-04-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* Content.php, ContentGroup.php:  All Content now implement the isDisplayableAt($node).  Used by the portal, if content has nothing displayabel, the entire content is skipped.
	
2005-04-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* FlickrPhotostream.php:  Fix the object so it doesn't crash when flicker is disabled.
	
2005-04-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* ContentGroup.php:  Fully functionnal content rotation engine, with all options supported.    Rotation based on session may not be reliable if the user isn't truly logged in (from a node). 

2005-04-26 François Proulx <francois.proulx@gmail.com>