@@ -138,6 +138,7 @@ class MainUI
 	 * @return HTML markup */
 	private function getToolContent($section = 'START')
 	{
+        global $session;
 		$html = '';
 		if ($section = 'START')
 		{
@@ -149,7 +150,15 @@ class MainUI
 			{
 				$html .= '<p>'._("Logged in as:").' '.$user->getUsername().'</p>'."\n";
 				$html .= '<a class="administration" HREF="'.BASE_SSL_PATH.'?content=myprofile"><img class="administration" src="/images/profile.gif" border="0"> My profile</a>'."\n";
-				$html .= '<a class="administration" HREF="'.BASE_SSL_PATH.'login/?logout=true"><img class="administration" src="/images/logout.gif" border="0"> Logout</a>'."\n";
+                
+                $gw_id = $session->get(SESS_GW_ID_VAR);
+                $gw_address = $session->get(SESS_GW_ADDRESS_VAR);
+                $gw_port = $session->get(SESS_GW_PORT_VAR);
+                
+                if($gw_id && $gw_address && $gw_port)
+                    $html .= '<a class="administration" HREF="'.BASE_SSL_PATH.'login/?logout=true&gw_id='.$gw_id.'&gw_address='.$gw_address.'&gw_port='.$gw_port.'"><img class="administration" src="/images/logout.gif" border="0"> Logout</a>'."\n";
+                else
+				    $html .= '<a class="administration" HREF="'.BASE_SSL_PATH.'login/?logout=true"><img class="administration" src="/images/logout.gif" border="0"> Logout</a>'."\n";
 
 			}
 			else
