@@ -1,4 +1,8 @@
 2005-04-28 François Proulx <francois.proulx@gmail.com>
+	* Logout button build a query string containing gw_id, gw_address, gw_port ( if available ), so that a user at a physical hotspot will get the login page from the hotspot he is.
+	* Fixed but in Locale ( did not propertly set the locale in the session )
+	
+2005-04-28 François Proulx <francois.proulx@gmail.com>
 	* Added check in MainUI toolbar so that it won't show "NOT logged in ?" message when connect to a real hotspot ( not virtual )
 		* This message confused many users ( they clicked and got the virtual login instead ! )
 	* Hide adminstration features ( statistics, hotspot creation, network wide content etc...) from all but Super admins
